fix: user avatar not fitting container

--- a/ui/Avatar.module.css
+++ b/ui/Avatar.module.css
@@ -4,7 +4,7 @@
 }
 
 .avatar {
-	@apply object-cover object-center rounded-full;
+	@apply object-cover object-center rounded-full h-[inherit];
 }
 
 .error {
